--- a/src/shell/casparcg.config
+++ b/src/shell/casparcg.config
@@ -157,29 +157,33 @@
                 <args>[most ffmpeg arguments related to filtering and output codecs]</args>
             </ffmpeg>
             <artnet>
-                <universe>0</universe>
-
-                <host>127.0.0.1</host>
-                <port>6454</port>
-
                 <refresh-rate>30</refresh-rate>
 
-                <fixtures>
-                    <fixture>
-                        <type>RGBW</type>
-                        <start-address>1</start-address>
-                        <fixture-count>10</fixture-count>
-                        <fixture-channels>6</fixture-channels>
+                <senders>
+                    <sender>
+                        <universe>0</universe>
 
-                        <x>960</x>
-                        <y>540</y>
+                        <host>127.0.0.1</host>
+                        <port>6454</port>
 
-                        <width>500</width>
-                        <height>100</height>
+                        <fixtures>
+                            <fixture>
+                                <type>RGBW</type>
+                                <start-address>1</start-address>
+                                <fixture-count>10</fixture-count>
+                                <fixture-channels>6</fixture-channels>
 
-                        <rotation>0</rotation>
-                    </fixture>
-                </fixtures>
+                                <x>960</x>
+                                <y>540</y>
+
+                                <width>500</width>
+                                <height>100</height>
+
+                                <rotation>0</rotation>
+                            </fixture>
+                        </fixtures>
+                    </sender>
+                </senders>
             </artnet>
         </consumers>
         <producers>
